third_party/move/move-compiler-v2/tests/checking/friends/friend_decl_self_with_use.move
module 0xc0ffee::o {
    use 0xc0ffee::o;
    friend o;

    public fun test() {}
}
